--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -25,7 +25,7 @@
 	<div class="">
 		<div class="row">
       <div class="col-lg-3">
-        <div class="progress">
+        <div class="progress"><i class="fa fa-ticket"></i>
           <div class="progress-bar progress-bar-success sold" role="progressbar" data-funded="<%= @presenter.per_cent_sold(@event) %>">
             <span><%= @presenter.tickets_sold(@event) %> sold</span>
           </div>
@@ -36,8 +36,8 @@
 					<div class="addthis_toolbox">
 						<div class="custom_images">
 							<ul class="list-inline">
-                <li><a href=""><i class="fa fa-map-marker"></i> Rudy's Dublin</a></li>
-                <li><i class="fa fa-calendar"></i> Wed, Nov 15 @ 8pm</li>
+                <li><a href=""><i class="fa fa-map-marker"></i> TBC <%= @event.location %></a></li>
+                <li><i class="fa fa-calendar"></i> <%= @event.date.strftime('%A, %b %e @ %l:%M %p') %></li>
 								<li><a class="addthis_button_more"><i class="fa fa-share"></i></a></li>
               </ul>
 						</div>
