--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -12,6 +12,9 @@
       <option value="3">3 tickets</option>
       <option value="4">4 tickets</option>
       <option value="5">5 tickets</option>
+      <option value="6">6 tickets</option>
+      <option value="7">7 tickets</option>
+      <option value="8">8 tickets</option>
     </select>
   </div>
   <%= f.hidden_field :event_id, value: @event.id %>
