--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -68,6 +68,9 @@
   }
 }
 
+.subtotal {
+  padding-right: 10px;
+}
 
 .addthis_toolbox {
   &:hover {
@@ -104,4 +107,68 @@
   background: #ffffff;
 }
 
+// admin events
+#orange, #purple, #cyan, #aqua, #gold {
+  vertical-align: middle;
+  box-sizing: border-box;
+  min-height: 400px;
+  border: 5px solid #32373A;
+  vertical-align: middle;
+}
+
+#aqua {
+  min-height: 800px;
+  background: rgb(18, 176, 197);
+  // padding: 20px;
+}
+
+#cyan {
+  // width: 40%;
+  background: rgb(71, 187, 179);
+}
+#purple {
+  // width: 40%;
+  background: #9c4274;
+}
+
+#orange {
+  // width: 60%;
+  background: rgb(236, 102, 60);
+}
+
+#gold {
+  // width: 60%;
+  background: #ff9618;
+}
+
+#dash {
+  a  {
+    text-decoration: none;
+    color: white;
+    opacity: 0.8;
+    font-size: 24px;
+  }
+  background: #32373A;
+  margin: 20px 40px;
+  color: white;
+  h1 {
+    font-size: 40px;
+    opacity: 0.8;
+    margin-bottom: 20px;
+  }
+  tbody {
+    width: 100%;
+  }
+  td {padding-right: 20px;}
+}
+
+#cash-dash {
+  padding: 40px;
+  font-size: 56px;
+}
+
+#target-dash {
+  padding: 40px;
+  text: center;
+}
 
