--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -9,7 +9,7 @@
   margin-right: -250px;
   right: 0;
   width: 250px;
-  background: #000;
+  background: #32373A;
   position: fixed;
   height: 100%;
   overflow-y: auto;
@@ -68,6 +68,14 @@
   background: none;
 }
 
+#filepick {
+  margin: 5px;
+  top: 0;
+  left: 0;
+  position: fixed;
+  z-index: 1;
+}
+
 #menu-toggle {
   top: 0;
   right: 0;
@@ -119,6 +127,7 @@ $xlarge: 1200;
 // Sticky Footer
 html, body  {
   height: 100%;
+  background: #32373A;
 }
 
 .wrapper {
