event page looking sexy

--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -47,7 +47,10 @@ $ ->
 
 # backSretch
 $ ->
-  $("#event-banner").backstretch($("#event-banner").data('url'))
+  if $("#event-banner").data('url')
+    $("#event-banner").backstretch($("#event-banner").data('url'))
+  else
+    $("#event-banner").hide();
 
 # Progress bar
 $ ->
