--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -127,7 +127,7 @@ $xlarge: 1200;
 // Sticky Footer
 html, body  {
   height: 100%;
-  background: #32373A;
+  // background: #32373A;
 }
 
 .wrapper {
@@ -135,7 +135,7 @@ html, body  {
   height: auto !important;
   height: 100%;
   margin: 0 auto -60px;
-  // background: #32373A;
+  background: #32373A;
 }
 
 .push {
@@ -143,7 +143,7 @@ html, body  {
 }
 
 footer {
-  padding: 20px;
+  // padding: 20px;
   text-align: center;
   .landing {
     color: white;
