--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -12,9 +12,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3 text-center">
-        <h2>100 Motels?</h2>
+        <h2>100 Motels</h2>
         <p class="lead">Touring without a label backing you up is tough. I found myself not playing shows because of money worries and uncertainty over the likely attendances. I built 100 motels to ease those worries, I hope it can help you too! </p>
-        <!-- <p class="lead"><em><small>- Seo Cahill, Crete Boom.</small></em></p> -->
         <%= link_to "Try it Free", users_path, method: :post, class: "btn btn-success btn-lg" %>
       </div>
     </div>
@@ -28,7 +27,7 @@
         <div class="service-item">
           <i class="service-icon fa fa-credit-card"></i>
           <h4>Sign up and connect with Stripe</h4>
-          <p>We use Stripe to collect and pay out money. Stripe also provide us with the means to verify your identity.</p>
+          <p>Stripe is like paypal except better! We use it to collect money, to pay out to your account and also to verify your identity.</p>
         </div>
       </div>
       <div class="col-md-2 text-center">
