--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -2,11 +2,11 @@
 // scoped to events controller
 #event-banner {
   display: table;
-  height: 100%;
+  min-height: 100%;
+  height: 500px;
   width: 100%;
   position: relative;
   box-sizing: border-box;
-  height: 400px;
 }
 
 
@@ -79,15 +79,17 @@
 }
 
 #event-information  {
-  margin-top: 30px;
-  margin-left: 10px;
-  margin-right: 10px;
-  padding: 10px;
+  background: #fff url('gplaypattern.png');
+  padding-top: 40px;
+  padding-bottom: 30px;
+  padding-left: 40px;
+  padding-right: 40px;
+  border-bottom: 1px #F8E7E7 solid;
   .progress  {
-    height: 24px;
+    height: 28px;
+    font-size: 20px;
   }
   .progress-bar {
-    font-size: 18px;
   }
 }
 
@@ -104,7 +106,8 @@
 }
 
 #event-media {
-  background: #ffffff;
+  padding: 40px 0;
+  background: #D1CCCC url('gplaypattern.png');
 }
 
 // admin events
@@ -170,5 +173,11 @@
 #target-dash {
   padding: 40px;
   text: center;
+}
+
+.black-wrapper {
+  margin: 0;
+  padding: 0;
+  background: #32373A;
 }
 
