--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,15 +24,15 @@
         <li><%= link_to("Your Account", user_path(current_user)) if current_user
          %></li>
         <li><%= link_to "Events", events_path unless current_user %></li>
-        <li><%= link_to "Events", admin_events_path if current_user %></li>
+        <li><%= link_to "Dashboard", admin_events_path if current_user %></li>
         <li><%= link_to("New Event", new_admin_event_path) if current_user %></li>
         <li><%= link_to("Edit Event", edit_admin_event_path(@event)) if @event and current_user %></li>
-        <li><%= link_to("Orders", admin_event_path(@event)) if @event and current_user %></li>
+        <li><%= link_to("Event Orders", admin_event_path(@event)) if @event and current_user %></li>
         <li><%= link_to("Ticket Check", admin_event_tickets_path(@event)) if @event and current_user %></li>
-        <li><%= link_to("Message", new_admin_event_message_path(@event)) if @event and current_user %></li>
+        <li><%= link_to("Message Customers", new_admin_event_message_path(@event)) if @event and current_user %></li>
         <li><%= link_to("Extend Event", new_admin_event_message_path(@event)) if @event and current_user %></li>
-        <li><%= link_to("Charge", new_admin_event_message_path(@event)) if @event and current_user %></li>
-        <li><%= link_to("Cancel", new_admin_event_message_path(@event)) if @event and current_user %></li>
+        <li><%= link_to("Charge Customers", charges_path(event_id: @event.id), method: :post, data: {confirm: "Are you sure?"}) if @event and current_user %></li>
+        <li><%= link_to("Cancel Event", new_admin_event_message_path(@event)) if @event and current_user %></li>
         <li class="divider"></li>
         <li><%= link_to("Sign In", login_path) unless current_user %></li>
         <li><%= link_to("Sign Out", logout_path) if current_user %></li>
