--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -120,28 +120,10 @@ footer {
 }
 
 //Info Page
-#side-menu  {
-  padding: 20px;
-  @include media-above($ipad-landscape){
-    padding: 20px 50px;
-  }
-  background: white;
-  box-shadow: 0 8px 50px rgba(0, 0, 0, 0.2);
-  margin-bottom: 20px;
-}
-.affix {
-  @include media-below($medium-max){
-    position: static;
-    width: auto;
-    top: 0;
-  }
-}
 #info-page-content  {
+  margin-top: 20px;
   padding: 40px;
   background: white;
   box-shadow: 0 8px 50px rgba(0, 0, 0, 0.2);
-}
-#founder-speaks {
-  margin-bottom: 20px;
 }
 
