--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
     <div class="push"></div>
     </div> <!-- /wrap -->
     <footer>
-      <span>© 100 Motels 2013 | legal | privacy | info | contact</span>
+      <span>© 100 Motels 2013 | <%= link_to "legal", info_path %> | <%= link_to "privacy", info_path %> | <%= link_to "info", info_path %> | <a href="//www.seocahill.com">blog</a></span>
     </footer>
   </body>
 </html>
