--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -5,66 +5,49 @@
 }
 
 #search-results {
+  // background: image-url("motels_landing_splash.jpg") no-repeat center center fixed;
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // -o-background-size: cover;
+  // background-size: cover;
+  background: #5A5656;
+  min-height: 800px;
+  padding: 15px;
+}
+
+#signin-page {
   background: image-url("motels_landing_splash.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  min-height: 800px;
+  height: 800px;
+  // background: #5A5656;
 }
 
-#search-results .box {
-  // border: 5px solid #fff;
-  // cursor: pointer;
-  // height: 182px;
-  // float: left;
-  // margin: 5px;
+#search-results figure {
+  // margin: 0;
+  // padding: 0;
   // position: relative;
-  overflow: hidden;
-  // width: 200px;
-  // -webkit-box-shadow: 1px 1px 1px 1px #ccc;
-  // -moz-box-shadow: 1px 1px 1px 1px #ccc;
-  // box-shadow: 1px 1px 1px 1px #ccc;
+  // overflow: hidden;
 }
 
-#search-results .box img {
-    position: absolute;
-    left: 0;
-    -webkit-transition: all 300ms ease-out;
-    -moz-transition: all 300ms ease-out;
-    -o-transition: all 300ms ease-out;
-    -ms-transition: all 300ms ease-out;
-    transition: all 300ms ease-out;
+#search-results figure figcaption {
+  background: rgba(0,0,0,0.3);
+  color: #fff;
+  font-size: 18px;
+  text-align: center;
+  a:active {
+    text-decoration: none;
+  }
+  // padding: .3rem;
+  // position: absolute;
+  transition: .6s;
 }
 
-#search-results .box .caption {
-    background-color: rgba(0,0,0,0.8);
-    position: absolute;
-    color: #fff;
-    z-index: 100;
-    -webkit-transition: all 300ms ease-out;
-    -moz-transition: all 300ms ease-out;
-    -o-transition: all 300ms ease-out;
-    -ms-transition: all 300ms ease-out;
-    transition: all 300ms ease-out;
-    left: 0;
+#search-results figure:hover figcaption {
+  transform: translateY(-2rem);
 }
-
-#search-results .box .full-caption {
-    width: 100%;
-    height: 100%;
-    top: -400px;
-    text-align: left;
-    padding: 15px;
-}
-
-.box:hover .full-caption {
-  -moz-transform: translateY(100%);
-  -o-transform: translateY(100%);
-  -webkit-transform: translateY(100%);
-  transform: translateY(100%);
-}
-
 
 // event show
 #event-banner {
