tidying up now looking pretty good

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -231,3 +231,14 @@
   background: #32373A;
 }
 
+.event-form {
+  padding-top: 60px;
+  .well {
+    background: url('concrete_wall_2.png')
+  }
+}
+
+.event-form-wrapper {
+  background-color: $brown;
+  height: 800px;
+}
