--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,3 +1,6 @@
+// colors
+$brown: rgba(90, 86, 86, 1);
+
 // customize brand color test
 .navbar {
   .brand  {
@@ -213,18 +216,21 @@ footer {
 {
     margin-top: 20px;
     padding: 40px 0px 20px 0px;
-    background-color: #f7f7f7;
+    background-color: rgba(248, 243, 243, 0.89);
     -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 .login-title
 {
-    color: #ffffff;
-    font-size: 28px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #ffffff;
+  font-size: 28px;
+  h1 {
     font-family: 'Lobster', cursive;
-    font-weight: 400;
-    display: block;
+  }
+  font-weight: 400;
+  display: block;
 }
 .profile-img
 {
