--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -1,59 +1,58 @@
-<div class="container well">
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown"><h3 class="page-header"><%= @event.name %> in <%= @event.location %> <b class="caret"></b></h3></a>
-        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-          <% current_user.events.each do |event| %>
-            <li role="presentation"><%= link_to "#{event.name} in #{event.location}", admin_event_path(event) %></li>
-          <% end %>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <form>
-            <div class="input-group">
-              <input type="search" name="query" class="form-control input-lg" value="<%= params[:query] %>">
-              <div class="input-group-btn">
-                <button type="submit" class="btn btn-default btn-lg" action='<%= admin_event_path(@event, query: params[:query]) %>'>Search</button>
-                <%= link_to "PDF", admin_event_path(@event, format: 'pdf'),  class: "btn btn-default btn-lg" %>
-              </div>
-            </div>
-          </form>
-          <br>
-          <div class="table-responsive">
-            <table class="table table-striped table-bordered" id="admin-customers">
-              <thead>
-                <tr>
-                  <th>Name</th>
-                  <th>Email</th>
-                  <th>UUID</th>
-                  <th>Quantity</th>
-                  <th>Order Total</th>
-                  <th></th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody>
-                <% @orders.each do |order| %>
-                <tr>
-                  <td><%= order.name %> </td>
-                  <td><%= order.email %> </td>
-                  <td><%= order.id.truncate(8) %> </td>
-                  <td><%= order.quantity %></td>
-                  <td><%= number_to_currency(order.total - order.part_refund) %></td>
-                  <td><span class="label label-info"><%= order.stripe_event %></span></td>
-                  <td><%= link_to "view", order_path(order) %></td>
-                </tr>
-                <% end %>
-              </tbody>
-            </table>
+<div class="event-order-wrapper">
+  <div class="event-order-table">
+    <div class="container well">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="">
+            <h3 class="page-header"><%= @event.name %> in <%= @event.location %> on <%= time_tag(@event.date) %>.</h3>
           </div>
-          <%= will_paginate @orders, renderer: BootstrapPagination::Rails %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <form>
+                <div class="input-group">
+                  <input type="search" name="query" class="form-control input-lg" value="<%= params[:query] %>">
+                  <div class="input-group-btn">
+                    <button type="submit" class="btn btn-default btn-lg" action='<%= admin_event_path(@event, query: params[:query]) %>'>Search</button>
+                    <%= link_to "PDF", admin_event_path(@event, format: 'pdf'),  class: "btn btn-default btn-lg" %>
+                  </div>
+                </div>
+              </form>
+              <br>
+              <div class="table-responsive">
+                <table class="table table-striped table-bordered" id="admin-customers">
+                  <thead>
+                    <tr>
+                      <th>Name</th>
+                      <th>Email</th>
+                      <th>UUID</th>
+                      <th>Quantity</th>
+                      <th>Order Total</th>
+                      <th></th>
+                      <th></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% @orders.each do |order| %>
+                    <tr>
+                      <td><%= order.name %> </td>
+                      <td><%= order.email %> </td>
+                      <td><%= order.id.truncate(8) %> </td>
+                      <td><%= order.quantity %></td>
+                      <td><%= number_to_currency(order.total - order.part_refund) %></td>
+                      <td><span class="label label-info"><%= order.stripe_event %></span></td>
+                      <td><%= link_to "view", order_path(order) %></td>
+                    </tr>
+                    <% end %>
+                  </tbody>
+                </table>
+              </div>
+              <%= will_paginate @orders, renderer: BootstrapPagination::Rails %>
+            </div>
+          </div>
         </div>
       </div>
     </div>
