--- a/app/views/admin/messages/_form.html.erb
+++ b/app/views/admin/messages/_form.html.erb
@@ -16,7 +16,7 @@
       <div class="form-group">
       <%= f.label :date, "New date if rescheduling", class: "col-lg-3 control-label" %>
         <div class="col-lg-6">
-          <%= f.date_field :date, class: "form-control", placeholder: ""%>
+          <%= f.date_field :date, class: "form-control input-lg", placeholder: ""%>
         </div>
       </div>
       <div class="form-group">
