--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -53,7 +53,7 @@
       <div class="col-lg-offset-2 col-lg-6">
         <div class=''>
           <button type="submit" class="btn btn-primary ">Submit</button>
-          <%= link_to "Cancel", user_path(current_user), class: "btn btn-default" %>
+          <%= link_to "Cancel", root_path, class: "btn btn-default" %>
         </div>
       </div>
       </div>
