--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -55,5 +55,5 @@
   </div>
 </section>
 <footer>
-  <span>© 100 Motels 2013 | legal | privacy | info | contact</span>
+  <span>© 100 Motels 2013 | <%= link_to "legal", info_path %> | <%= link_to "privacy", info_path %> | <%= link_to "info", info_path %> | <a href="//www.seocahill.com">blog</a></span>
 </footer>
