--- a/app/views/admin/tickets/index.erb
+++ b/app/views/admin/tickets/index.erb
@@ -3,7 +3,7 @@
     <div class="container well">
       <div class="row">
         <div class="col-lg-12">
-          <h3 class="page-header"><%= @event.name %> in <%= @event.location %></h3>
+          <h3 class="page-header"><%= @event.name %> in <%= @event.location %> at <%= time_tag(@event.date) %></h3>
         </div>
       </div>
       <div class="row">
