--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -69,8 +69,9 @@ $ ->
       key: "<%= ENV['STRIPE_PUBLIC_KEY'] %>"
       address: false
       amount: Number($('.order-total').text()) * 100
-      currency: "usd"
+      currency: "USD"
       name: "100 Motels"
+      image: "<%= image_path('motels_m.png') %>"
       description: "Your Tickets"
       panelLabel: "Checkout"
       token: token
