--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -3,7 +3,7 @@
     <div class="container well">
       <div class="row">
         <div class="col-lg-9">
-          <h3 class="page-header"><%= @event.name %> in <%= @event.location %> on <%= time_tag(@event.date) %>.</h3>
+          <h3 class="page-header"><%= link_to "#{@event.name} in #{@event.location} on #{@event.date.strftime('%A, %b %d')}.", event_path(@event) %></h3>
         </div>
         <div class="col-lg-3">
           <%= link_to "Charge Orders", charges_path, method: :post, class: "btn btn-lg btn-success btn-block", event_id: @event.id %>
