--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -12,29 +12,13 @@
   $('.order-total').html(order_price.toFixed(2))
 
 # Best in place stuff
-$ ->
-  $('.best_in_place_about').on 'ajax:success', () ->
-    $.get window.location.pathname, (data) ->
-      $('.about').html $(data).find(".about").html()
-      # $('.edit-about').text "Edit"
-      # $('#cancel-button').removeClass("hideme")
+# $ ->
+#   $('#edit-about').on 'best_in_place:update', () ->
+#     $(this).show()
 
-$ ->
-  $('.edit-about').click () ->
-    $(this).text () ->
-      if $(this).is('.active') then "Edit" else "Save"
-    $('#cancel-button').toggleClass("hideme")
-
-$ ->
-  $('#cancel-button').on 'mousedown', () ->
-    $('.edit-about').removeClass('active').text("Edit")
-    $(this).addClass("hideme")
-
-$ ->
-  $(document).keyup (e) ->
-    if e.keyCode is 27 and $('.edit-about').is('.active')
-      $('.edit-about').removeClass('active').text("Edit")
-      $('#cancel-button').addClass("hideme")
+  # $('.best_in_place_about').on 'ajax:success', () ->
+  #   $.get window.location.pathname, (data) ->
+  #     $('.about').html $(data).find(".about").html()
 
 $ ->
   $('.best_in_place').best_in_place()
