--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -29,7 +29,7 @@
 					<div class="addthis_toolbox">
 						<div class="custom_images">
 							<ul class="list-inline">
-                <li><a href=""><i class="fa fa-map-marker"></i> TBC <%= @event.location %></a></li>
+                <li><i class="fa fa-map-marker"></i> <%= @event.location %></li>
                 <li><i class="fa fa-calendar"></i> <%= @event.date.strftime('%A, %b %e @ %l:%M %p') %></li>
 								<li><a class="addthis_button_more"><i class="fa fa-share"></i></a></li>
               </ul>
