--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -25,9 +25,15 @@
       </div>
       </div>
       <div class="form-group">
-      <%= f.label :date, class: "col-lg-2 control-label" %>
+      <%= f.label :date_field, "Date", class: "col-lg-2 control-label" %>
       <div class="col-lg-6">
-        <%= f.date_field :date, class: "form-control", placeholder: ""%>
+        <%= f.date_field :date_field, class: "form-control", value: @event.date.strftime('%Y-%m-%d') %>
+      </div>
+      </div>
+      <div class="form-group">
+      <%= f.label :time_field, "Time", class: "col-lg-2 control-label" %>
+      <div class="col-lg-6">
+        <%= f.time_field :time_field, class: "form-control", value: @event.date.strftime("%H:%M") %>
       </div>
       </div>
       <div class="form-group">
@@ -48,6 +54,8 @@
         <%= f.check_box :visible, class: "form-control", placeholder: "" %>
       </div>
       </div>
+      <%= f.hidden_field :image %>
+      <%= f.hidden_field :about %>
 
       <div class="form-group">
       <div class="col-lg-offset-2 col-lg-6">
