ready to deploy

--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -27,13 +27,13 @@
       <div class="form-group">
       <%= f.label :date, class: "col-lg-2 control-label" %>
       <div class="col-lg-6">
-        <%= f.date_field :date, class: "form-control", value: @event.date.strftime('%Y-%m-%d') %>
+        <%= f.date_field :date, class: "form-control", value: Date.today.strftime('%Y-%m-%d') %>
       </div>
       </div>
       <div class="form-group">
       <%= f.label :time, class: "col-lg-2 control-label" %>
       <div class="col-lg-6">
-        <%= f.time_field :time, class: "form-control", value: @event.time.strftime("%H:%M") %>
+        <%= f.time_field :time, class: "form-control", value: Time.now.strftime("%H:%M") %>
       </div>
       </div>
       <div class="form-group">
