--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,15 +21,21 @@
       <ul class="sidebar-nav">
         <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
         <li class="sidebar-brand"><%= link_to "100 Motels", root_path %></li>
-        <li><%= link_to("Your Account", user_path(current_user)) if current_user
-         %></li>
         <li><%= link_to "Events", events_path unless current_user %></li>
-        <li><%= link_to "Dashboard", admin_events_path if current_user %></li>
-        <li><%= link_to("New Event", new_admin_event_path) if current_user %></li>
-        <li><%= link_to("Edit Event", edit_admin_event_path(@event)) if @event.try(:id) and current_user %></li>
-        <li><%= link_to("Event Orders", admin_event_path(@event)) if @event.try(:id) and current_user %></li>
-        <li><%= link_to("Ticket Check", admin_event_tickets_path(@event)) if @event.try(:id) and current_user %></li>
-        <li><%= link_to("Notify, Reschedule or Cancel", new_admin_event_message_path(@event)) if @event.try(:id) and current_user %></li>
+        <% if current_user and current_user.guest? %>
+          <li><%= link_to("Save your Account", user_path(current_user))%></li>
+        <% end %>
+        <% if current_user and !current_user.guest? %>
+          <li><%= link_to("Your Account", user_path(current_user))%></li>
+          <li><%= link_to "Dashboard", admin_events_path %></li>
+          <li><%= link_to("New Event", new_admin_event_path) %></li>
+        <% end %>
+        <% if current_user and !current_user.guest? and @event.try(:id) %>
+          <li><%= link_to("Edit Event", edit_admin_event_path(@event)) %></li>
+          <li><%= link_to("Event Orders", admin_event_path(@event)) %></li>
+          <li><%= link_to("Ticket Check", admin_event_tickets_path(@event)) %></li>
+          <li><%= link_to("Notify, Reschedule or Cancel", new_admin_event_message_path(@event)) %></li>
+        <% end %>
         <li class="divider"></li>
         <li><%= link_to("Sign In", login_path) unless current_user %></li>
         <li><%= link_to("Sign Out", logout_path) if current_user %></li>
