--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user, method: :post, html: { class: 'form well', role: "form" } do |f| %>
+<%= form_for @user, method: :post, html: { class: 'form', role: "form" } do |f| %>
   <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name, class: 'form-control' %>
