--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,9 @@
       <ul class="sidebar-nav">
         <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
         <li class="sidebar-brand"><%= link_to "100 Motels", root_path %></li>
-        <li><%= link_to "Events", events_path unless current_user %></li>
+        <li><%= link_to "Events", events_path %></li>
         <% if current_user and current_user.guest? %>
-          <li><%= link_to("Save your Account", user_path(current_user))%></li>
+          <li><%= link_to("Save your Account", new_user_path)%></li>
         <% end %>
         <% if current_user and !current_user.guest? %>
           <li><%= link_to("Your Account", user_path(current_user))%></li>
