--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,41 @@
-<div class="container">
-  <div class="row">
-    <div class="col-lg-6 col-lg-offset-2">
-      <h3 class="page-header">Sign Up</h3>
-        <%= render 'form' %>
+<div id="signin-page">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 col-md-4 col-md-offset-4">
+        <% if @user.errors.any? %>
+          <div class="alert alert-danger" >
+            <a class="close" data-dismiss="alert">&#215;</a>
+            <% @user.errors.full_messages.each do |msg| %>
+              <%= content_tag :div, msg %>
+            <% end %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6 col-md-4 col-md-offset-4">
+        <span class="text-center login-title"><h1 class="">100 Motels</h1></span>
+        <div class="account-wall">
+            <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
+            <!-- <p class="profile-name">Bhaumik Patel</p> -->
+            <%= form_for @user, method: :post, html: { class: 'form-signin', role: "form" } do |f| %>
+              <div class="form-group">
+                <%#= f.label :email %>
+                <%= f.text_field :name, class: 'form-control', placeholder: "Name" %>
+              </div>
+              <div class="form-group">
+                <%#= f.label :email %>
+                <%= f.email_field :email, class: 'form-control', placeholder: "Email" %>
+              </div>
+              <div class="form-group">
+                <%#= f.label :password %>
+                <%= f.password_field :password, class: 'form-control', placeholder: "Password" %>
+              </div>
+              <%= f.submit "Sign Up", class: 'btn btn-primary btn-lg btn-block' %>
+            <%= link_to "sign-in instead", new_session_path, class: "need-help" %><span class="clearfix"></span>
+            <% end %>
+        </div>
+      </div>
     </div>
   </div>
 </div>
