changed url method for broken images

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -1,6 +1,6 @@
 // events index
 .search-bar {
-  background: #fff url('concrete_wall_2.png');
+  background: #fff image-url('concrete_wall_2.png');
   padding: 20px;
 }
 
