changed url to image-url

--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -5,7 +5,7 @@
 
 .message-form {
   .well {
-    background: url('concrete_wall_2.png')
+    background: image-url('concrete_wall_2.png')
   }
   padding-top: 40px;
 }
