--- a/app/assets/stylesheets/tickets.css.scss
+++ b/app/assets/stylesheets/tickets.css.scss
@@ -5,7 +5,7 @@
 
 .event-tickets-table {
   .container {
-    background: url('concrete_wall_2.png');
+    background: image-url('concrete_wall_2.png');
     height: 600px;
   }
   padding-top: 60px;
