--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -11,7 +11,7 @@
 .user-form {
   padding-top: 60px;
   .well {
-    background: url('concrete_wall_2.png');
+    background: image-url('concrete_wall_2.png');
     height: 600px;
     i {
       font-size: 18px;
