--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -122,7 +122,7 @@
 }
 
 #event-information  {
-  background: #fff url('concrete_wall_2.png');
+  background: #fff image-url('concrete_wall_2.png');
   padding-top: 40px;
   padding-bottom: 30px;
   padding-left: 40px;
@@ -150,7 +150,7 @@
 
 #event-media {
   padding: 40px 0;
-  background: #fff url('concrete_wall_2.png');
+  background: #fff image-url('concrete_wall_2.png');
 }
 
 // admin events
@@ -238,7 +238,7 @@
 .event-form {
   padding-top: 60px;
   .well {
-    background: url('concrete_wall_2.png')
+    background: image-url('concrete_wall_2.png')
   }
 }
 
